# llm-alignment-finance-chat-bf

./: .gitignore  README.md  install-dev.sh  install.sh  requirements.txt
notebooks/: baseline_charts.ipynb  full_charts.ipynb  logistic_regression.ipynb  run_simulation.ipynb
src/: main.py  setup.cfg  setup.py
src/experiments/: exec_baseline.py  exec_full_sim.py  runner.py  utils.py
src/simconfig/: agent_prompts.json  base_config.py  llm_system_prompt.txt  sim_env.yaml
src/simulator/: agents.py  core.py  logging.py  utils.py
src/tests/: sample_llm.py
