[metadata]
name = llm-alignment-finance-chat-bf
description = Studying LLM alignment in financial domain by simulated environments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bancaditalia/llm-alignment-finance-chat-bf

[options]
packages = find:
python_requires = >=3.11